--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="node_modules/jquery/dist/jquery.slim.js"></script> 
-     <script src="../assets/jquery-3.1.1.min.js"></script> 
+     <script src="node_modules/jquery/dist/jquery.min.js"></script> 
 <!--     <script>window.jQuery || document.write('<script src="node_modules/jquery/dist/jquery.min.js"><\/script>')</script>
  -->    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
    <!--  <script src="node_modules/popper.js/dist/popper.js"></script> -->
