now we can see all values and keys of this object

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="col-md-12">
             <textarea style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff; ">
       </textarea>
-
+      <div class="test"></div>
         </div>
       </div>
 
