--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   </head>
 
   <body style="padding-top: 80px;">
@@ -137,6 +138,7 @@
         
         <div class="col-md-4">
            <button class="btn btn-primary btn-lg">get Swapi Json</button>
+           <button class="btn btn-primary btn-lg btn2">Get All character</button>
         </div>
 
       </div>
@@ -145,7 +147,8 @@
         <div class="col-md-12">
             <textarea style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff; ">
       </textarea>
-      <div class="test"></div>
+      <div class="firstName"></div>
+      <div class="allName"></div>
         </div>
       </div>
 
