resolve conflit css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+   
   </head>
 
   <body style="padding-top: 80px;">
@@ -136,9 +136,13 @@
       </div><!-- row -->
       <div style="padding-top: 20px;" class="row">
         
-        <div class="col-md-4">
+
+        <div class="col-md-3">
            <button class="btn btn-primary btn-lg">get Swapi Json</button>
-           <button class="btn btn-primary btn-lg btn2">Get All character</button>
+           
+        </div>
+        <div class="col-md-3">
+        	<button class="btn btn-primary btn-lg btn2">Get All character</button>
         </div>
 
       </div>
