--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         
 
         <div class="col-md-3">
-           <button class="btn btn-primary btn-lg">get Swapi Json</button>
+           <button class="btn btn-primary btn-lg btn1">get First Name</button>
            
         </div>
         <div class="col-md-3">
@@ -148,11 +148,11 @@
       </div>
 
         <div style="padding-top: 20px;" class="row">
-        <div class="col-md-12">
-            <textarea style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff; ">
-      </textarea>
-      <div class="firstName"></div>
-      <div class="allName"></div>
+        <div class="col-md-12 allName" style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff;" >
+            <!-- <textarea style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff; "> -->
+    <!--   </textarea> -->
+   <!--    <div class="firstName"></div>
+      <div class="allName"></div> -->
         </div>
       </div>
 
