--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
         <div class="col-md-3">
         	<button class="btn btn-primary btn-lg btn2">Get All character</button>
         </div>
-
       </div>
 
         <div style="padding-top: 20px;" class="row">
@@ -155,6 +154,28 @@
       <div class="allName"></div> -->
         </div>
       </div>
+
+
+		<div class="modal">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title">Modal title</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		        <p>Modal body text goes here.</p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-primary">Save changes</button>
+		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
 
     </div><!-- /.container -->
 
