add an other button to display 87characters, linked main.css for display 87 characters download layzr.js librairie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
    
   </head>
 
@@ -138,16 +139,20 @@
         
 
         <div class="col-md-3">
-           <button class="btn btn-primary btn-lg btn1">get First Name</button>
+           <button class="btn btn-primary btn-lg btn1">get First character</button>
            
         </div>
         <div class="col-md-3">
-        	<button class="btn btn-primary btn-lg btn2">Get All character</button>
+        	<button class="btn btn-primary btn-lg btn2">Get All characters</button>
+        </div>
+
+        <div class="col-md-3">
+          <button class="btn btn-primary btn-lg btn3">Get All 87 characters</button>
         </div>
       </div>
 
         <div style="padding-top: 20px;" class="row">
-        <div class="col-md-12 allName" style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff;" >
+        <div class="col-md-12 allName" style=" width: 100% ; height: auto; resize: none; background-color: #7f8c8d; color:#fff;" >
             <!-- <textarea style=" width: 100% ; height: 300px; resize: none; background-color: #000; color:#fff; "> -->
     <!--   </textarea> -->
    <!--    <div class="firstName"></div>
@@ -195,6 +200,8 @@
  -->    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
    <!--  <script src="node_modules/popper.js/dist/popper.js"></script> -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="node_modules/layzr.js/dist/layzr.js"></script>
+
     <script type="text/javascript" src="assets/js/script.js"></script>
   </body>
 </html>
