--- a/index.html
+++ b/index.html
@@ -40,11 +40,47 @@
 
     <div class="container">
 
+        <!-- Trigger/Open The Modal -->
+     <!--    <button id="myBtn">Open Modal</button> -->
+
+        <!-- The Modal -->
+     <!--    <div id="myModal" class="modal">
+ -->
+          <!-- Modal content -->
+<!--           <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Some text in the Modal..</p>
+          </div>
+
+        </div>
+ -->
+
+      <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Modal Header</h2>
+          </div>
+          <div class="modal-body">
+            <p>Some text in the Modal Body</p>
+            <p>Some other text...</p>
+          </div>
+          <div class="modal-footer">
+            <h3>Modal Footer</h3>
+          </div>
+        </div>
+
+      </div>
+
+
       <div class="row">
         <div class="col-sm-12 col-lg-12">
             <img alt="lion" src="images/leon.jpg" width="100%" >
         </div>
       </div>
+
 
       <div class="row" style="padding-top: 20px;">
         
