--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-   
+   <script type="text/javascript" src="node_modules/lodash/lodash.js"></script>
   </head>
 
   <body style="padding-top: 80px;">
@@ -61,7 +61,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <span class="close">&times;</span>
-            <h2>Modal Header</h2>
+            <h2 class="modal-title">Modal Header</h2>
           </div>
           <div class="modal-body">
             <p>Some text in the Modal Body</p>
