--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <span class="close">&times;</span>
-            <h2 class="modal-title">Modal Header</h2>
+            <h2 class="modal-title"></h2>
           </div>
           <div class="modal-body">
-            <p>Some text in the Modal Body</p>
-            <p>Some other text...</p>
+            <p class="detail-perso"></p>
+           
           </div>
           <div class="modal-footer">
-            <h3>Modal Footer</h3>
+            <h3 class="lien-perso"></h3>
           </div>
         </div>
 
